新增图片类型90

--- a/templates/workflow/workflow_manage_edit.html
+++ b/templates/workflow/workflow_manage_edit.html
@@ -112,6 +112,7 @@
                                                     <option value="60">用户名</option>
                                                     <option value="70">多选用户名</option>
                                                     <option value="80">附件</option>
+                                                    <option value="90">图片</option>
           
           
                                                   </select>
