新增图片类型90

--- a/templates/workflow/workflow_manage_edit.html
+++ b/templates/workflow/workflow_manage_edit.html
@@ -679,6 +679,8 @@
             return "多选用户名"
           } else if (full.field_type_id === 80){
             return "附件"
+          } else if (full.field_type_id === 90){
+            return "图片"
           }
         return "未知";
 
